fixed bug with layout overflowing to right and left of site. Added max-width to globalcss in order to stop that

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
 
 * {
     box-sizing:border-box;
+    max-width:100vw
 }
 body,html {
     box-sizing:border-box;
